Fix #22 -- System messages are now aligned to the center of the layout

--- a/views/default/elements/layout.css
+++ b/views/default/elements/layout.css
@@ -53,14 +53,21 @@
 
 /***** PAGE MESSAGES ******/
 .elgg-system-messages {
+	left: 37%;
+	right: initial;
+	max-width: 85%;
 	position: fixed;
+	/* font-size: large; */
+	font-weight: bold;
+	border: 0px;
 	top: 42px;
-	right: 20px;
-	max-width: 500px;
-	z-index: 2000;
+	z-index: 999999;
 }
 .elgg-system-messages li {
+	padding: 1em;
 	margin-top: 10px;
+	border-radius: 0.8em !important;
+	border: 1px dashed;
 }
 .elgg-system-messages li p {
 	margin: 0;
